modified Controller Logic